--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,25 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+
+# Vscode
+.vscode/
+# Godot-cpp
+godot-cpp/
+
+# Builds
+# Windows
+*.vcxproj
+*.vcxproj.*
+*.sln
+*.dir/
+
+*.cmake
+
+Debug/
+CMakeFiles/
+CMakeCache.txt
+x64/
+
+#Wasm
+build*
